# Survey-Data

./: .env  .gitignore  Cargo.toml  create_tables.sql
src/: database.rs  main.rs  routes.rs  tests.rs  util.rs
src/routes/: debug.rs  index.rs  statics.rs  test.rs
static/: style.css
static/sass/: feedback.scss  structure.scss  style.scss  test.scss
templates/: base.html.tera  index.html.tera
