[package]
name = "survey-data"
version = "0.1.0"
authors = ["tailcalled <tailcalled@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "time" ] }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
lazy_static = "1.4.0"
sass-rocket-fairing = "0.1"

[default]
sass_dir = "static/sass"
css_dir = "static/css"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]